# RoboMaster-SDK

./: .gitignore  README.md  setup.py
.github/workflows/: build.yaml  release_libmedia.yml
lib/libmedia_codec/: CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  setup.py  vcpkg.json
lib/libmedia_codec/pybind11/include/pybind11/: attr.h
lib/libmedia_codec/src/: media_codec.h
src/multi_robomaster/: tool.py
src/robomaster/: action.py  camera.py  chassis.py  client.py  conn.py  led.py  media.py  protocol.py  robot.py  servo.py  version.py
