[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name = "libmedia_codec"
version = "0.0.1"

[tool.scikit-build]
minimum-version = "build-system.requires"
install.components = ["libmedia_codec"]
wheel.exclude = ["__pycache__"]
cmake.args = ["--preset default"]